--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -41,6 +41,7 @@
     }
 
 
+
     function runFilter() { //rename Id's to be self descriptive.
             $.ajax({
                 type: "POST",
@@ -49,15 +50,18 @@
                     'sport': arr,
                     'age': $('#ageFilter')[0].options[$('#ageFilter')[0].selectedIndex].value,
                     'grade': $('#gradeFilter')[0].options[$('#gradeFilter')[0].selectedIndex].value,
-                    'name': $('#nameInput').text(),
-                    'year'  $('#yearInput').val(),
-                    'school': $('#nameInput').text()
+                    'year': $('#yearInput').val(),
+                    'school': $('#schoolInput').val()
+                    
+
                 },
                 datatype: 'json',
                 cache: false,
                 success: (data) => {
-                     document.title = "changed";
-                    
+                    document.title = "changed";
+
+                    console.log();
+
                     clearTableBody();
                     data.n.forEach(buildTableBody);
                     if (document.getElementById("SearchResults").innerHTML == "") { //temp message
@@ -114,7 +118,7 @@
             </div>
             <div class="form-group">
                 <label for="Year" class="sr-only">Year</label>
-                <input id="yearInput" type="number" class="form-control" placeholder="Year">
+                <input id="yearInput" type="text" class="form-control" placeholder="Year">
             </div>
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
