--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -18,12 +18,8 @@
         runFilter(); // handles the onchange event for checkboxes
     }
 
-    function searchAfterKeyPressed() {
+    $(function () { 
 
-    }
-
-    $(function () { // on click changed to a timeout
-        $('#btnDD').on("click", runFilter);
         $('#ageFilter').on("change", runFilter);
         $('#gradeFilter').on("change", runFilter);
         $('#schoolInput').on('keyup change', runFilterAfterDelay);
@@ -40,6 +36,22 @@
         }, 500);
     }
 
+    function getKidInfo(obj) {
+         $.ajax({
+                type: "POST",
+                url: '@Url.Action("getKidDataForModal")', 
+                data: {
+                    'kidId': Number(obj.children[0].innerHTML)
+                },
+                datatype: 'json',
+                cache: false,
+                success: (data) => {
+                    buildSearchModalBody(data.result); 
+                }
+
+        })
+            return false;
+    }
 
 
     function runFilter() { //rename Id's to be self descriptive.
@@ -52,7 +64,7 @@
                     'grade': $('#gradeFilter')[0].options[$('#gradeFilter')[0].selectedIndex].value,
                     'year': $('#yearInput').val(),
                     'school': $('#schoolInput').val(),
-                    'name':$('#nameInput').val()
+                    'name': $('#nameInput').val()
 
                 },
                 datatype: 'json',
@@ -60,18 +72,16 @@
                 success: (data) => {
                     document.title = "changed";
 
-                    console.log($('#nameInput').val());
-
                     clearTableBody();
-                    data.n.forEach(buildTableBody);
+                    data.result.forEach(buildTableBody);
                     if (document.getElementById("SearchResults").innerHTML == "") { //temp message
                         document.getElementById("SearchResults").innerHTML = " No Results Found ";
                     }
                 }
 
-            })
-            return false;
-        }
+        })
+        return false;
+    }
 
     //TODO: Call the function when the user starts searching or filtering.
 
@@ -81,16 +91,30 @@
 
     function buildTableBody(searchItems) {
         document.getElementById("SearchResults").innerHTML +=
-        "<tr>" +
-        "<td>" + searchItems.fname + "</td>" +
-        "<td>" + searchItems.lname + "</td>" +
-        "<td>" + searchItems.year + "</td>" +
-        "<td>" + searchItems.rank[0].rank + "</td>" +
-        "<td>" + searchItems.age + "</td>" +
-        "<td>" + searchItems.school + "</td>" +
-        "<td>" + searchItems.grade + "</td>" +
-        "<td>" + searchItems.sport + "</td>" +
-        "</tr>";
+            "<tr data-toggle=\"modal\" data-target=\"#kidModal\" class=\"clickableRow\" onclick=\"getKidInfo(this)\">" +
+            "<td hidden>" + searchItems.id + "</td>" +
+            "<td>" + searchItems.fname + "</td>" +
+            "<td>" + searchItems.lname + "</td>" +
+            "<td>" + searchItems.year + "</td>" +
+            "<td>" + searchItems.rank[0].rank + "</td>" +
+            "<td>" + searchItems.age + "</td>" +
+            "<td>" + searchItems.school + "</td>" +
+            "<td>" + searchItems.grade + "</td>" +
+            "<td>" + searchItems.sport + "</td>" +
+            "</tr>";
+    }
+
+
+    function buildSearchModalBody(KidInfo) {
+        document.getElementById("searchModalBody").innerHTML = "<ul class=\"list-unstyled \">" +
+            "<li class=\"modal-Text\"> Full Name:  <span>" + KidInfo.fname + " " + KidInfo.lname + "</span></li>" +
+            "<li class=\"modal-Text\"> Year:  <span>" + KidInfo.year + "</span></li>" +
+            "<li class=\"modal-Text\"> Grade: <span>" + KidInfo.grade + "</span></li>" +
+            "<li class=\"modal-Text\"> Age:   <span>" + KidInfo.age + "</span></li>" +
+            "<li class=\"modal-Text\"> Rank:  <span>" + KidInfo.rank[0].rank + "</span></li>" +
+            "<li class=\"modal-Text\"> School:<span>" + KidInfo.school + "</span></li>" +
+            "<li class=\"modal-Text\"> Sport:<span>" + KidInfo.sport + "</span></li>" +
+        "</ul> ";
     }
 
 </script>
@@ -181,7 +205,7 @@
 
 <div class="col-md-10 col-sm-12 col-xs-12">
 
-    <table class="table table-striped">
+    <table class="table">
         <thead>
             <tr>
 
@@ -201,8 +225,8 @@
       @foreach (var item in Model.allOfThem)
       {
           
-            <tr>
-
+            <tr data-toggle="modal" data-target="#kidModal"  onclick="getKidInfo(this)" class="clickableRow">
+                <td hidden>@item.id</td>
                 <td>@item.fname</td>
                 <td>@item.lname</td>
                 <td>@item.year</td>
@@ -221,6 +245,71 @@
 
 
 
+</div>
+
+
+<script>
+
+
+
+</script>
+
+<style>
+    .modal-content {
+        border-radius: 15px;
+  
+    }
+    .modal-header {
+        background-color: #647af1;
+        border-radius: 15px 15px 0 0;
+
+    }
+    .modal-body{
+        text-align:left;
+    }
+
+    .modal-footer {
+        border-radius: 0 0 15px 15px;
+    }
+
+    .modal-Text{
+        font-weight:bolder;
+    }
+
+    .clickableRow {
+        transition: all 0.3s ease 0s;
+    }
+    .clickableRow:nth-child(2n) {
+        background-color:#cdcdcd;
+    }
+   .clickableRow:hover{
+        background-color:#0094ff;
+    }
+    .clickableRow:active {
+        background-color: #0064ff;
+    }
+
+
+</style>
+
+
+<div class="modal fade" id="kidModal" role="dialog">
+    <div class="modal-dialog text-center">
+
+        <!-- Modal content-->
+        <div class="modal-content text-center">
+
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h4>Details</h4>
+            </div>
+
+            <div id="searchModalBody" class="modal-body">
+                                         
+            </div>
+
+        </div>
+    </div>
 </div>
 
 
