--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -33,5 +33,6 @@
             </div>
         </div>
     </div>
+    @Html.HiddenFor(m => m.ReturnToken, new { id = "ReturnToken" })
     @Html.HiddenFor(m => m.ReturnToken)
 }
