change the location for Alert

--- a/OCRC/Views/Account/ResetPassword.cshtml
+++ b/OCRC/Views/Account/ResetPassword.cshtml
@@ -30,9 +30,9 @@
                         Submit
                     </button>
                 </form>
+                @Html.ValidationSummary()
             </div>
         </div>
     </div>
-    @Html.HiddenFor(m => m.ReturnToken, new { id = "ReturnToken" })
     @Html.HiddenFor(m => m.ReturnToken)
 }
