--- a/OCRC/Views/Account/RegisterUser.cshtml
+++ b/OCRC/Views/Account/RegisterUser.cshtml
@@ -23,20 +23,6 @@
             @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", @placeholder = "example@example.com" } })
         </div>
         <div class="form-group">
-          <!--  <label for="exampleInputPassword1">Role</label><br>
-            <label class="checkbox-inline">
-                <input type="checkbox" value="">Admit
-            </label>
-            <label class="checkbox-inline">
-                <input type="checkbox" value="">Clerk
-            </label>
-            <label class="checkbox-inline">
-                <input type="checkbox" value="">Cocah
-            </label>
-            <label class="checkbox-inline">
-                <input type="checkbox" value="">School
-            </label>
-            -->
             <label class="checkbox-inline">
                 @Html.CheckBoxFor(model => model.role[0], new { @class = "checkbox" }) Admin
             </label>
@@ -51,17 +37,21 @@
             </label>
 
         </div>
-
+        <div class="form-group" id="teamSelector">
+            <label for="exampleInputEmail1">Team</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Team">
+        </div>
+        <div class="form-group" id="schoolSelector">
+            <label for="exampleInputEmail1">School</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="School">
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.password, new { htmlAttributes = new { @class = "control-label" } })
             @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Password" } })
             
         </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">School</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="School">
-        </div>
+        
 
 
         <button type="submit" class="btn btn-default">Submit</button>
