--- a/OCRC/Views/Account/UserList.cshtml
+++ b/OCRC/Views/Account/UserList.cshtml
@@ -1,55 +1,48 @@
-﻿
+﻿@model IEnumerable<OCRC.Models.User>
+
 @{
     ViewBag.Title = "UserList";
 }
 
 <script src="https://use.fontawesome.com/1e803d693b.js"></script>
 
-    <div class="row">
-        <div class="panel panel-default user_panel">
-            <div class="panel-heading">
-                <h3 class="panel-title">User List </h3>
-                
-
-            </div>
-            <div class="panel-body">
-                <div class="table-container">
-                    <table class="table-users table" border="0">
-                        <tbody>
+<div class="row">
+    <div class="panel panel-default user_panel">
+        <div class="panel-heading">
+            <h3 class="panel-title">User List</h3>
+        </div>
+        <div class="panel-body">
+            <div class="table-container">
+                <table class="table-users table" border="0">
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
                             <tr>
                                 <td width="10" align="center">
                                     <i class="fa fa-2x fa-user fw"></i>
                                 </td>
                                 <td>
-                                    John Smith<br><i class="fa fa-envelope"></i>
+                                    <a href="@Url.Action( "EditUser", "Account", new { id = @item.userID })">
+                                        <p>@Html.DisplayFor(modelItem => item.fname) @Html.DisplayFor(modelItem => item.lname)</p>
+                                        <br>
+                                        <i class="fa fa-envelope">@Html.DisplayFor(modelItem => item.email)</i>
+                                    </a>
                                 </td>
                                 <td>
-                                    Administrator
+                                    @Html.DisplayFor( modelItem => item.role )
                                 </td>
-                                <td align="center">
-                                    Last Login:  6/14/2017<br><small class="text-muted">2 days ago</small>
+                               <td align="center">
+                                   @* Last Login:  @Html.DisplayFor( modelItem => item. not implemented )<br><small class="text-muted">Less Than an hour</small>*@
                                 </td>
                             </tr>
-                            <tr>
-                                <td width="10" align="center">
-                                    <i class="fa fa-2x fa-user fw"></i>
-                                </td>
-                                <td>
-                                    Herbert Hoover<br><i class="fa fa-envelope"></i>
-                                </td>
-                                <td>
-                                    User
-                                </td>
-                                <td align="center">
-                                    Last Login:  6/10/2017<br><small class="text-muted">5 days ago</small>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <span class="btn btn-default">@Html.ActionLink("Register user", "RegisterUser", "Account")</span>
-                </div>
+                        }
+                        
+                    </tbody>
+                </table>
+                <span class="btn btn-default">@Html.ActionLink("Register user", "RegisterUser", "Account")</span>
             </div>
         </div>
     </div>
+</div>
 
 
