Removed space between number and th in the grade filter, changed the grades to only 12 instead of 13 and age from 5 to 18

--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -186,15 +186,15 @@
             <select id="gradeFilter" class="form-control">
                 <option value="0">Grade</option>
                 
-                @for (int i = 1; i < 14; i++)
+                @for (int i = 1; i < 13; i++)
                 {
-                    <option value="@i">@i th</option>
+                    <option value="@i">@(i)th</option>
                 }
             </select>
 
             <select id="ageFilter" class="form-control">
                 <option value="0">Age</option>
-                @for (int i = 5; i < 20; i++)
+                @for (int i = 5; i < 19; i++)
                 {
                     <option value="@i">@i</option>
                 }
