--- a/OCRC/Views/Account/RegisterUser.cshtml
+++ b/OCRC/Views/Account/RegisterUser.cshtml
@@ -39,11 +39,11 @@
         </div>
         <div class="form-group" id="teamSelector">
             <label for="exampleInputEmail1">Team</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Team">
+            @Html.EditorFor(model => model.teamIdentifier, new { htmlAttributes = new { @class = "form-control", @placeholder = "Team Name" } })
         </div>
         <div class="form-group" id="schoolSelector">
             <label for="exampleInputEmail1">School</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="School">
+            @Html.EditorFor(model => model.schoolIdentifier, new { htmlAttributes = new { @class = "form-control", @placeholder = "School Name" } })
         </div>
 
         <div class="form-group">
